--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>INPARQUES</title>
-  <link rel="stylesheet" href="/CSS/style.css">
-  <link rel="icon" href="/MULTIMEDIA/alce.png">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="icon" href="MULTIMEDIA/alce.png">
 </head>
 <body> 
   <header>
@@ -26,15 +26,15 @@
   <section id="inicio">
     <h2 style="text-align: center; margin-bottom: 1rem;">Parques Nacionales</h2>
     <div class="carousel">
-      <img src="/MULTIMEDIA/park1.jpg" alt="Imagen 1">
-      <img src="/MULTIMEDIA/park2.jpg" alt="Imagen 2">
-      <img src="/MULTIMEDIA/park3.jpg" alt="Imagen 3">
+      <img src="MULTIMEDIA/park1.jpg" alt="Imagen 1">
+      <img src="MULTIMEDIA/park2.jpg" alt="Imagen 2">
+      <img src="MULTIMEDIA/park3.jpg" alt="Imagen 3">
     </div>
     <div style="text-align: center;">
       <a href="parques.html" class="carousel-button">Ver más</a>
     </div>
     <video autoplay muted loop playsinline style="width: 100%; height: auto; padding: 10%;">
-        <source src="/MULTIMEDIA/videoplayback.mp4" type="video/mp4">
+        <source src="MULTIMEDIA/videoplayback.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
   </section>
@@ -94,10 +94,10 @@
   <section>
     <h2 style="text-align: center; margin-bottom: 1rem;">Galería</h2>
     <div class="collage">
-      <img src="/MULTIMEDIA/charlas.jpeg" alt="Foto 1">
-      <img src="/MULTIMEDIA/carpas.jpg" alt="Foto 2">
-      <img src="/MULTIMEDIA/Parque-Nacional-Morrocoy.jpg" alt="Foto 3">
-      <img src="/MULTIMEDIA/laguna.jpg" alt="Foto 4">
+      <img src="MULTIMEDIA/charlas.jpeg" alt="Foto 1">
+      <img src="MULTIMEDIA/carpas.jpg" alt="Foto 2">
+      <img src="MULTIMEDIA/Parque-Nacional-Morrocoy.jpg" alt="Foto 3">
+      <img src="MULTIMEDIA/laguna.jpg" alt="Foto 4">
     </div>
   </section>
 
@@ -110,13 +110,13 @@
     <h2 style="text-align: center; margin-bottom: 1rem;">Nuestras Oficinas</h2>
     <div class="carousel-alt">
       <div class="card active">
-        <img src="/MULTIMEDIA/siembra.jpg" alt="Carta 1">
+        <img src="MULTIMEDIA/siembra.jpg" alt="Carta 1">
       </div>
       <div class="card">
-        <img src="/MULTIMEDIA/piedras.jpg" alt="Carta 2">
+        <img src="MULTIMEDIA/piedras.jpg" alt="Carta 2">
       </div>
       <div class="card">
-        <img src="/MULTIMEDIA/incendios forestales.jpg" alt="Carta 3">
+        <img src="MULTIMEDIA/incendios forestales.jpg" alt="Carta 3">
       </div>
     </div>
     <div style="text-align: center;">
